examples/test/testpolicy5154.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5154
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key5: value20
      key2: value0
      key16: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value35
      podSelector:
        matchLabels:
          key44: value29
          key32: value5
          key17: value5
